log

Thu 17 Aug 2023 08:27:20 PM UTC: 
 tests:  0|7
total_score: 0/70
3a52915
Thu 17 Aug 2023 08:27:35 PM UTC: 
 exercises.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 59 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:21: error: array subscript is not an integer
   70 |           arregloPar[index] = arr[i];
      |                     ^
exercises.c:70:31: error: ‘arr’ undeclared (first use in this function)
   70 |           arregloPar[index] = arr[i];
      |                               ^~~
exercises.c:70:31: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:77:10: error: ‘result’ undeclared (first use in this function)
   77 |   return result;
      |          ^~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:89:7: error: array size missing in ‘arr3’
   89 |   int arr3[];
      |       ^~~~
exercises.c:91:1: error: expected ‘(’ before ‘}’ token
   91 | }
      | ^
      | (
exercises.c:89:7: error: unused variable ‘arr3’ [-Werror=unused-variable]
   89 |   int arr3[];
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aae4563
Thu 17 Aug 2023 08:28:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:30: error: ‘arr’ undeclared (first use in this function)
   70 |           arregloPar[iPos] = arr[i];
      |                              ^~~
exercises.c:70:30: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:77:10: error: ‘result’ undeclared (first use in this function)
   77 |   return result;
      |          ^~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:89:7: error: array size missing in ‘arr3’
   89 |   int arr3[];
      |       ^~~~
exercises.c:91:1: error: expected ‘(’ before ‘}’ token
   91 | }
      | ^
      | (
exercises.c:89:7: error: unused variable ‘arr3’ [-Werror=unused-variable]
   89 |   int arr3[];
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c537ed
Thu 17 Aug 2023 08:28:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:77:10: error: ‘result’ undeclared (first use in this function)
   77 |   return result;
      |          ^~~~~~
exercises.c:77:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:89:7: error: array size missing in ‘arr3’
   89 |   int arr3[];
      |       ^~~~
exercises.c:91:1: error: expected ‘(’ before ‘}’ token
   91 | }
      | ^
      | (
exercises.c:89:7: error: unused variable ‘arr3’ [-Werror=unused-variable]
   89 |   int arr3[];
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8482297
Thu 17 Aug 2023 08:29:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:89:7: error: array size missing in ‘arr3’
   89 |   int arr3[];
      |       ^~~~
exercises.c:91:1: error: expected ‘(’ before ‘}’ token
   91 | }
      | ^
      | (
exercises.c:89:7: error: unused variable ‘arr3’ [-Werror=unused-variable]
   89 |   int arr3[];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
741e573
Thu 17 Aug 2023 08:29:49 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
8814a98
Thu 17 Aug 2023 08:42:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:21: error: array subscript is not an integer
   70 |           arregloPar[index] = arr[i];
      |                     ^
exercises.c:70:31: error: ‘arr’ undeclared (first use in this function)
   70 |           arregloPar[index] = arr[i];
      |                               ^~~
exercises.c:70:31: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:77:10: error: ‘arregloPos’ undeclared (first use in this function); did you mean ‘arregloPar’?
   77 |   return arregloPos;
      |          ^~~~~~~~~~
      |          arregloPar
exercises.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ca4a33
Thu 17 Aug 2023 08:43:13 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:21: error: array subscript is not an integer
   70 |           arregloPar[index] = arreglo[i];
      |                     ^
Compilation failed
c1920b7
Thu 17 Aug 2023 08:43:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3ac2908
Thu 17 Aug 2023 08:43:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:21: error: expected expression before ‘;’ token
   48 |   int *arregloPar = ;
      |                     ^
Compilation failed
253830b
Thu 17 Aug 2023 08:43:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
14b78a6
Thu 17 Aug 2023 08:45:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fe49336
Thu 17 Aug 2023 08:45:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
1439ddb
Thu 17 Aug 2023 08:51:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:44: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |     arregloPar = (int *)realloc(*newTamano * sizeof(int));
      |                                 ~~~~~~~~~~~^~~~~~~~~~~~~
      |                                            |
      |                                            long unsigned int
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:1:
exercises.c:60:25: error: too few arguments to function ‘realloc’
   60 |     arregloPar = (int *)realloc(*newTamano * sizeof(int));
      |                         ^~~~~~~
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fba8b92
